--- a/conf/pdservice.properties
+++ b/conf/pdservice.properties
@@ -3,4 +3,8 @@ docker_cert=certs
 docker_host=tcp://127.0.0.1:2376
 proxy_host_addr=127.0.0.1
 proxy_host_name=
+trigger_added=
+trigger_removed=
+trigger_bash=bash
+refresh_time=10000
 listen=:9231
