add docker finder.

--- a/conf/pdservice.properties
+++ b/conf/pdservice.properties
@@ -1,8 +1,9 @@
 [loc]
 docker_cert=certs
-docker_host=tcp://127.0.0.1:2376
-proxy_host_addr=127.0.0.1
-proxy_host_name=
+docker_addr=tcp://127.0.0.1:2376
+docker_host=127.0.0.1
+host_suffix=
+trigger_finder=
 trigger_added=
 trigger_removed=
 trigger_bash=bash
