--- a/conf/pdservice.properties
+++ b/conf/pdservice.properties
@@ -3,6 +3,8 @@ docker_cert=certs
 docker_addr=tcp://127.0.0.1:2376
 docker_host=127.0.0.1
 host_suffix=
+host_proto=
+host_self=
 trigger_finder=
 trigger_added=
 trigger_removed=
