add docker clear supported.

--- a/conf/pdservice.properties
+++ b/conf/pdservice.properties
@@ -2,6 +2,10 @@
 docker_cert=certs
 docker_addr=tcp://127.0.0.1:2376
 docker_host=127.0.0.1
+docker_clear_delay=60
+docker_clear_exc=
+docker_prune_delay=60
+docker_prune_exc=
 host_suffix=
 host_proto=
 host_self=
