add docker supported.

--- a/conf/pdservice.properties
+++ b/conf/pdservice.properties
@@ -1,19 +1,20 @@
 [loc]
-docker_cert=certs
-docker_addr=tcp://127.0.0.1:2376
-docker_host=127.0.0.1
-docker_clear_delay=60
+docker_cert=${PD_DOCKER_CERT,@/}
+docker_addr=${PD_DOCKER_ADDR,@/}
+docker_host=${PD_DOCKER_HOST,@/}
+docker_clear_delay=
 docker_clear_exc=
-docker_prune_delay=60
+docker_prune_delay=
 docker_prune_exc=
-host_suffix=
-host_proto=
-host_self=
+host_suffix=${PD_HOST_SUFFIX}
+host_proto=${PD_HOST_PROTO,@/}
+host_self=${PD_HOST_SELF,@/}
+match_key=${PD_MATCH_KEY,@/-srv-}
 trigger_finder=
 trigger_added=
 trigger_removed=
 trigger_bash=bash
-refresh_time=10000
-preview=
+refresh_time=${PD_REFRESH_TIME,@/10000}
+preview=${PD_PREVIEW,@/}
 log=40
 listen=:9231
