fix default proto/self.

--- a/conf/pdservice.properties
+++ b/conf/pdservice.properties
@@ -7,7 +7,7 @@ docker_clear_exc=
 docker_prune_delay=
 docker_prune_exc=
 host_suffix=${PD_HOST_SUFFIX}
-host_proto=${PD_HOST_PROTO,@/}
+host_proto=${PD_HOST_PROTO,@/http}
 host_self=${PD_HOST_SELF,@/}
 match_key=${PD_MATCH_KEY,@/-srv-}
 trigger_finder=
